# playlist-service

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Dockerfile  README.md  docker-compose.yml  playlist-service-specification.md  pyproject.toml
.claude/: settings.local.json
.github/workflows/: deploy.yml
alembic/: env.py
alembic/versions/: 001_initial_schema.py  002_add_channel_number.py  003_drop_stream_base_url.py  004_channel_groups.py  005_add_channel_source.py
app/: config.py  dependencies.py  exceptions.py  main.py  models.py  schemas.py
app/clients/: auth_service.py  epg_service.py  flussonic.py  nimble.py  rutv.py  stream_provider.py
app/models/: __init__.py  admin.py  base.py  channel.py  group.py  package.py  tariff.py  user.py
app/routes/: __init__.py  auth.py  channels.py  dashboard.py  groups.py  lookup.py  packages.py  pages.py  tariffs.py  users.py
app/schemas/: auth.py  channel.py  common.py  dashboard.py  group.py  package.py  tariff.py  user.py
app/services/: admin_auth.py  auth_sync.py  base.py  channel_service.py  channel_sync.py  database.py  group_service.py  logo_service.py  package_service.py  playlist_generator.py  tariff_service.py  user_service.py
app/templates/: base.html
frontend/: README.md  index.html  package-lock.json  package.json  tailwind.config.ts  vite.config.ts
scripts/: auth_identity_maintenance.py  create_admin.py
tests/: conftest.py  test_api_contract.py  test_auth_identity_maintenance.py  test_auth_sync.py  test_logo_service.py  test_service_cleanup.py  test_user_resolution.py
(+88 files in other folders)
