[project]
name = "playlist-service"
version = "1.0.0"
description = "IPTV Playlist Service for Flussonic Media Server"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "sqlalchemy[asyncio]>=2.0.36",
    "asyncpg>=0.30.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.6.0",
    "alembic>=1.14.0",
    "argon2-cffi>=23.1.0",
    "httpx>=0.28.0",
    "jinja2>=3.1.4",
    "python-multipart>=0.0.17",
    "itsdangerous>=2.2.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
